Templates/NETWORKING/xxxNSGRULES.json
{

    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "PrivateNSGName": {
        "type": "string",
        "metadata": {
          "description": "Name of the Private NSG"
        }
      },
      "PublicNSGName":{
        "type": "string",
        "metadata": {
          "description":"Name of the Public NSG"
        }
      },
      
      "taggingApplicationvalue": {
        "type": "string",
        "defaultValue": "AirVault DEV",
        "metadata": {
          "description": "Tagging value of the Application Name"
        }
      },
      "tagginguaivalue": {
        "type": "string",
        "defaultValue": "uai3026608",
        "metadata": {
          "description": "Tagging value of the Unique Application Identifier"
        }
      },
      "taggingenvvalue": {
        "type": "string",
        "defaultValue": "dev",
        "metadata": {
          "description": "Tagging value of the environment"
        }
      },
      "taggingcontactvalue": {
        "type": "string",
        "defaultValue": "Airvaultopsengineering@ge.com",
        "metadata": {
          "description": "Tagging value of the point of contact"
        }
      },
      "taggingpreservevalue": {
        "type": "string",
        "defaultValue": "TRUE",
        "metadata": {
          "description": "Tagging value of the preserver"
        }
      }
    },
    "variables": {
  
  
      "NSG": {
        "PUBNSG": "[parameters('PublicNSGName')]",
        "PVTNSG": "[parameters('PrivateNSGName')]"
      }
      
  
    },
    "resources": [
      
      
      {
        "apiVersion": "2018-02-01",
        "dependsOn": [
          
        ],
        "location": "[resourceGroup().location]",
        "tags": {
          "ApplicationName": "[parameters('taggingApplicationvalue')]",
          "uai": "[parameters('tagginguaivalue')]",
          "env": "[parameters('taggingenvvalue')]",
          "SupportEmail": "[parameters('taggingcontactvalue')]",
          "preserve": "[parameters('taggingpreservevalue')]"
        },
        "name": "[variables('NSG').PVTNSG]",
        "properties": {
          "securityRules": [
            {
              "name": "PING_ICMP_BETWEEN_DEV_SERVERS",
              "properties": {
                "access": "Allow",
                "description": "Allows the ping Inbound in between devtest servers",
                "destinationAddressPrefix": "172.19.47.0/24",
               
                "destinationPortRange": "*",
                "direction": "Inbound",
                "priority": "890",
                "protocol": "ICMP",
                "sourceAddressPrefix": "172.19.47.0/24",
                "sourcePortRange": "*"
              }
            },
            {
              "name": "ALLOW_PING_TEMP",
              "properties": {
                "access": "Allow",
                "description": "Allows the ping Inbound to Process Servers",
                "destinationAddressPrefix": "172.19.47.0/24",
               
                "destinationPortRange": "*",
                "direction": "Inbound",
                "priority": "900",
                "protocol": "ICMP",
                "sourceAddressPrefix": "172.16.0.0/16",
                "sourcePortRange": "*"
              }
            },
    
            {
              "name": "ALLOW_OUTBOUND_PING_TO_ONPREM",
              "properties": {
                "access": "Allow",
                "description": "Allow outbound ping to on prem servers",
                "destinationAddressPrefix": "172.16.0.0/16",
                
                "destinationPortRange": "*",
                "direction": "Outbound",
                "priority": "850",
                "protocol": "ICMP",
                "sourceAddressPrefix": "172.19.32.0/20",
                "sourcePortRange": "*"
              }
            },
            {
              "name": "PING_OUTBOUND_BETWEEN_DEV_SERVERS",
              "properties": {
                "access": "Allow",
                "description": "Allow outbound ping to on prem servers",
                "destinationAddressPrefix": "172.19.32.0/20",
                
                "destinationPortRange": "*",
                "direction": "Outbound",
                "priority": "870",
                "protocol": "ICMP",
                "sourceAddressPrefix": "172.19.32.0/20",
                "sourcePortRange": "*"
              }
            }
           
           
          ]
        },
        "scale": null,
        "type": "Microsoft.Network/networkSecurityGroups"
      },
      {
        "apiVersion": "2018-02-01",
        "dependsOn": [
         
        ],
        "location": "[resourceGroup().location]",
        "name": "[variables('NSG').PUBNSG]",
        "tags": {
          "ApplicationName": "[parameters('taggingApplicationvalue')]",
          "uai": "[parameters('tagginguaivalue')]",
          "env": "[parameters('taggingenvvalue')]",
          "SupportEmail": "[parameters('taggingcontactvalue')]",
          "preserve": "[parameters('taggingpreservevalue')]"
        },
        "properties": {
          "securityRules": [
            {
              "name": "ALLOW_HTTPS_INBOUND_INTERNET",
              "properties": {
                "access": "Allow",
                "description": "Allows the HTTPS Inbound from Internet to Application Gateway Subnet",
                "destinationAddressPrefix": "172.19.47.0/24",
                "destinationPortRange": "443",
                "direction": "Inbound",
                "priority": "1000",
                "protocol": "Tcp",
                "sourceAddressPrefix": "Internet",
                "sourcePortRange": "*"
              }
            },
            {
              "name": "ALLOW_DEFAULT_AGW_PORTS_INBOUND",
              "properties": {
                "access": "Allow",
                "description": "Allows the default ports required for Application Gateway Inbound",
                "destinationAddressPrefix": "172.19.47.0/24",
                "destinationPortRange": "65200-65535",
                "direction": "Inbound",
                "priority": "1010",
                "protocol": "*",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*"
              }
            },
            {
              "name": "ALLOW_LB_TO_AGW_INBOUND",
              "properties": {
                "access": "Allow",
                "description": "Allows the Azure LoadBalancer Inbound to Application Gateway Subnet",
                "destinationAddressPrefix": "172.19.47.0/24",
                "destinationPortRange": "*",
                "direction": "Inbound",
                "priority": "1020",
                "protocol": "*",
                "sourceAddressPrefix": "AzureLoadBalancer",
                "sourcePortRange": "*"
              }
            }
  
  
          ]
        
        },
        "scale": null,
        "type": "Microsoft.Network/networkSecurityGroups"
      }
    ],
    "outputs": {}
  }
